SPRING DYNAMIC MODULES FRAMEWORK CHANGELOG
==========================================
http://www.springframework.org/osgi

Changes in version 2.0.0 M2 (2009-mm-dd)
----------------------------------------

General
* upgraded to Felix 2.0.2
* upgraded to Knopflerfish 3.0.0.beta3


Changes in version 2.0.0 M1 (2009-09-28)
----------------------------------------

General
* JDK 5.0 required for both building and running; for JDK 1.4 support use 1.2.x branch
* upgraded to Spring Framework 3.0
* upgraded to Equinox 3.5.1
* upgraded to Knopflerfish 3.0.0.alfa1
* upgraded to Felix 1.8.1
* generified classes (both public and internal)
* updated archetype project to save locally the manifest generated during packaging
* aligned artifacts versioning with Spring Framework by uppercasing the qualifier (m1 becomes M1)
* added new elements to spring-osgi schema
* align various features with the OSGi r4.2 Blueprint spec

Package org.springframework.osgi.bundle
* deprecated BundleAction in favour of the BundleActionEnum enum 

Package org.springframework.osgi.config
* fixed race condition affecting configuration defaults in concurrent startups
* improved further the definition of generated definitions to avoid IDE validation complains
* added namespace tooling metadata

Package org.springframework.osgi.context
* improved serviceability by using NamedThreadLocal
* added class loader aware default Class/Class[] property editors
* fixed cleanup of an internal input stream used for loading property editors
* added support for schema handler filtering
* fixed incorrect transitive dependency between exporters and optional importers

Package org.springframework.osgi.compendium
* enhanced cm-properties to reflect Config Admin changes in the returned Properties object
* added new custom destruction callback to managed service factory objects

Package org.springframework.osgi.extender
* added JavaBean cache initialization for known types to reduce the number of class lookups during startup